# python_django

./: pyproject.toml
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  custom_filter.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_like_tweet.py  0004_alter_tweet_user.py
tweets/templates/: get_tweet.html  get_tweets.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
