[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["pjh5474 <warwarsn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
